examples/datalog/18_advanced_patterns/19_grouping_sets.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_grouping
Knowledge graph 'test_grouping' created.
Switched to knowledge graph: test_grouping
> .kg use test_grouping
Switched to knowledge graph: test_grouping
> +sales[("East", "Widget", 100), ("East", "Gadget", 200), ("West", "Widget", 150), ("West", "Gadget", 250)].
Inserted 4 fact(s) into 'sales'.
> +region_total(Region, <SUM:Amt>) :- sales(Region, _, Amt).
Script error: Parse error: Invalid term: '<SUM:Amt>'
