examples/datalog/18_advanced_patterns/19_grouping_sets.dl
% Test: Grouping sets simulation
% Expected: Can simulate grouping sets
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_grouping
.kg use test_grouping

+sales[("East", "Widget", 100), ("East", "Gadget", 200), ("West", "Widget", 150), ("West", "Gadget", 250)].

% Group by region
+region_total(Region, <SUM:Amt>) :- sales(Region, _, Amt).

% Group by product
+product_total(Product, <SUM:Amt>) :- sales(_, Product, Amt).

% Group by both
+both_total(Region, Product, <SUM:Amt>) :- sales(Region, Product, Amt).

?- region_total(R, T).
?- product_total(P, T).
?- both_total(R, P, T).

.kg use default
.kg drop test_grouping
